assignment_2_ex_15.txt
exe15
Xin-Xins-MacBook-Air:temp xin$ touch ex15.py
Xin-Xins-MacBook-Air:temp xin$ touch ex15_example.txt
Xin-Xins-MacBook-Air:temp xin$ python3.7 ex15.py ex15_example.txt
  File "ex15.py", line 13
    txt_again = open(file again)
                              ^
SyntaxError: invalid syntax
Xin-Xins-MacBook-Air:temp xin$ python3.7 ex15.py ex15_example.txt
here's your file ex15_example.txt:
This is stuff I typed into a file.
It is really cool stuff .
Lots and lots of fun to have in here.
type the filename again:
>ex15_example.txt
This is stuff I typed into a file.
It is really cool stuff .
Lots and lots of fun to have in here.

from sys import argv

script, filename = argv

txt = open(filename)

print(f"here's your file {filename}:")
print(txt.read())

print("type the filename again:")
file_again = input(">" )

txt_again = open(file_again)

print(txt_again.read())

exe15 study drill
4.
from sys import argv
#add features to the script
script, filename = argv
#assign 2 variables can work with
txt = open(filename)
#assign this file's text is the text
print(f"here's your file {filename}:")
#export 
print(txt.read())
#export the text of the ex15_example.txt
print("type the filename again:")
#export
file_again = input(">" )
#input the name of the ex15_example.txt
txt_again = open(file_again)
#assign txt_again
print(txt_again.read())
#export the text of the ex15_example.txt

5.
Xin-Xins-MacBook-Air:temp xin$ python3.7 ex15.py ex15_example.txt
here's your file ex15_example.txt:
This is stuff I typed into a file.
It is really cool stuff .
Lots and lots of fun to have in here.

6.
Xin-Xins-MacBook-Air:temp xin$ python3.7 ex15.py
type the filename again:
>ex15_example.txt
This is stuff I typed into a file.
It is really cool stuff .
Lots and lots of fun to have in here.

7.
Xin-Xins-MacBook-Air:temp xin$ python3.7 ex15.py ex15_example.txt
here's your file ex15_example.txt:
This is stuff I typed into a file.
It is really cool stuff .
Lots and lots of fun to have in here.
type the filename again:
>ex15_example.txt
This is stuff I typed into a file.
It is really cool stuff .
Lots and lots of fun to have in here.
None
None


from sys import argv
#add features to the script
script, filename = argv
#assign 2 variables can work with
txt = open(filename)
#assign this file's text is the text
print(f"here's your file {filename}:")
#export
print(txt.read())
#export the text of the ex15_example.txt
print("type the filename again:")
#export
file_again = input(">" )
#input the name of the ex15_example.txt
txt_again = open(file_again)
#assign txt_again
print(txt_again.read())
#export the text of the ex15_example.txt
print(txt.close())
print(txt_again.close())